Fixed skill chains got interrupted by delayed skills (introduced by d538cd2)
This also affected charge skills. This new solution no longer requires to cast a separate skill, as delayed skill effects should be applied directly.